--- a/advanced-forms/src/index.css
+++ b/advanced-forms/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div.adv-form form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+
+div.adv-form form input {
+  margin: 5px;
+}
+
+div.adv-form form span.error {
+  color: red;
+}
