--- a/advanced-forms/src/index.css
+++ b/advanced-forms/src/index.css
@@ -26,3 +26,19 @@ div.adv-form form input {
 div.adv-form form span.error {
   color: red;
 }
+
+div.user {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: 20px auto;
+  background-color: darksalmon;
+}
+
+div.user div {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+  border-bottom: 1px solid white;
+  padding-bottom: 2px;
+}
